Prevent <code> from messing up line spacing

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -63,7 +63,12 @@ h1, h2, h3, h4, h5 {
 }
 
 code, pre {
-    font-family: "Monaco", "Ubuntu Mono", monospace;
+    font-family: "Monaco", monospace;
+}
+
+code {
+    line-height: 0.85em;
+    font-size: 0.85em;
 }
 
 img {
